# TCP_Calc

./: CMakeLists.txt
Calculating/: Calculator.cpp  Calculator.h
Client/: client.cpp  client.h  client_main  client_main.cpp
Server/: server.cpp  server.h  server_main  server_main.cpp
